WTax_Assign/force-app/main/default/objects/WeatherSearch__c/WeatherSearch__c.object-meta.xml
<CustomObject>
    <label>WeatherSearch</label>
    <nameField>
        <displayFormat>WR-{0000}</displayFormat>
        <label>WeatherSearchReport Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WeatherSearchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>