WTax_Assign/force-app/main/default/objects/WeatherSearch__c/fields/Search_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Search_Date_Time__c</fullName>
    <label>Search Date Time</label>
    <type>DateTime</type>
</CustomField>