WTax_Assign/force-app/main/default/objects/WeatherSearch__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>